added p tag text

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="my-auto">
           <h2>Projects</h2>
           <h3 class="mb-0">Backpack</h3>
-          <p></p>
+          <p>A study tool made for students to create and share flashcards and practice tests they made</p>
           <div class="tooltip-parent-div">
             <img src="./img/backpack.png" class="project-images"/>
             <div class="tooltip-images"> tooltip text</div>
@@ -252,9 +252,9 @@
             <li class="list-inline-item">
               <i class="devicons devicons-npm"></i>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <i class="devicons devicons-"></i>
-            </li>
+            </li> -->
           </ul>
 
           <div class="subheading mb-3">Workflow</div>
