--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <p>A study tool made for students to create and share flashcards and practice tests they made</p>
           <div class="tooltip-parent-div">
             <img src="./img/backpack.png" class="project-images"/>
-            <div class="tooltip-images"> tooltip text</div>
+            <div class="tooltip-images"> heres the link! </div>
           </div>
           <h3 class="mb-0">Flask of Joe</h3>
           <p></p>
