--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="mailto:g830bo@gmail.com">Email: g830bo@gmail.com</a> ·
             <a href="./resources/2024 resume.pdf" target="_blank" rel="noreferer noopener">View my Resume</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">Passion, Problem solving, Collaboration. These are the cornerstones in which I base my work from. Im always looking for new opportunities and new skills to learn. Get in touch with me below!</p>
           <ul class="list-inline list-social-icons mb-0">
             <!-- <li class="list-inline-item">
               <a href="#">
@@ -172,14 +172,20 @@
           <p>A study tool made for students to create and share flashcards and practice tests they made</p>
           <div class="tooltip-parent-div">
             <img src="./img/backpack.png" class="project-images"/>
-            <div class="tooltip-images"> heres the link! </div>
+            <div class="tooltip-images-text"><p class="center">take a look at backpack <a href="https://capstone-backpack.onrender.com/" style="color:white;">here</a></p></div>
           </div>
           <h3 class="mb-0">Flask of Joe</h3>
-          <p></p>
-          <img src="./img/flaskofjoe.png" class="project-images"/>
-          <h3 class="mb-0">Airbnb</h3>
-          <p></p>
-          <img src="./img/coolspots.png" class="project-images"/>
+          <p>an ecommerce site where independant brewers can sell their coffee beans</p>
+          <div class="tooltip-parent-div">
+            <img src="./img/flaskofjoe.png" class="project-images"/>
+            <div class="tooltip-images-text"><p class="center">take a look at Flask of Joe <a href="https://flask-of-joe.onrender.com/" style="color:white;">here</a></p></div>
+          </div>
+          <h3 class="mb-0">Cool Spots</h3>
+          <p>a booking site where you can find a place for you and others to stay</p>
+          <div class="tooltip-parent-div">
+            <img src="./img/coolspots.png" class="project-images"/>
+            <div class="tooltip-images-text"><p class="center">take a look at cool spots <a href="https://cool-spotz.onrender.com" style="color:white;">here</a></p></div>
+          </div>
         </div>
       </section>
 
@@ -282,7 +288,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>Apart from being a web developer, I enjoy spending time being outdoors. Being based in Arizona theres so much hikes to go on, I'm looking to hike in the grand canyon as much as possible. I also enjoy incorperating technology into my hikes by testing out any gps features my phone or watch may have.</p>
-          <p class="mb-0"> I also love playing volley ball, and I frequently attend open gym sessions at the Arizona Athletic Grounds, which is this huge gym with tons of courts for basketball/volleyball, soccer, and more.</p>
+          <p class="mb-0"> I also love playing volley ball, and I frequently attend open gym sessions at the Arizona Athletic Grounds.</p>
         </div>
       </section>
 
@@ -298,8 +304,11 @@
               Mobile Web Specialist - Google Certification</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              App Academy Graduate - AA Certification of Completion</li>
+            <!-- <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li> -->
           </ul>
         </div>
       </section>
