--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">Feburary 2024 - October 2024</span>
             </div>
+            <!--
+            we can add some more certs here. maybe the harvard ai cert or a free code camp one
+            -->
           </div>
 
           <!-- <div class="resume-item d-flex flex-column flex-md-row">
