--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <span class="text-primary">Bonilla</span>
           </h1>
           <div class="subheading mb-5"> Mesa, AZ 85210 · (559) 723-6982 ·
-            <a href="mailto:g830bo@gmail.com">Email: g830bo@gmail.com</a> ·
+            <a href="mailto:gerardobonillajr.dev@gmail.com">Email: gerardobonillajr.dev@gmail.com</a> ·
             <a href="./resources/2024 resume.pdf" target="_blank" rel="noreferer noopener">View my Resume</a>
           </div>
           <p class="mb-5">Passion, Problem solving, Collaboration. These are the cornerstones in which I base my work from. Im always looking for new opportunities and new skills to learn. Get in touch with me below!</p>
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/gerardo-bonilla-jr-47453b1bb/" target="_blank" rel="noreferer noopener" >
+              <a href="https://www.linkedin.com/in/gerardo-bonilla-jr/" target="_blank" rel="noreferer noopener" >
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
